# degrid

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  authors.txt  license.txt  version.txt
.github/workflows/: tests.yml
data/: .gitignore
data/degrid/: degrid.asset  degrid.pack
data/degrid/boss/: boss.asset  boss.assets  boss.pack  cannoneer.blend  cannoneer.mtl  cannoneer.obj_ball.cpm  cannoneer.obj_body.cpm  cannoneer.obj_bulb.cpm  cannoneer.obj_cannon.cpm  cannoneer.obj_inner.cpm  cannoneer.obj_roof.cpm  cannoneerBody.object  cannoneerBulb.object  cannoneerCannon.object  egg.blend  egg.obj_DefaultMaterial.cpm
data/degrid/environment/: environment.asset  environment.assets  environment.blend  environment.obj_explosion.cpm  environment.obj_grid.cpm  environment.obj_spark.cpm  (+2 more)
data/grid/: grid.asset  grid.pack
sources/: achievements.cpp  collision.cpp  environment.cpp  game.h  gameInit.cpp  globals.cpp  includes.h  main.cpp  physics.cpp  player.cpp  powerup.cpp  screens.cpp  screens.h  sounds.cpp  statistics.cpp
sources/grid/: gameInit.cpp  highPerformanceGpuHint.cpp  includes.h  main.cpp  player.cpp  screens.cpp  sounds.cpp
sources/monsters/: bossEgg.cpp  cannoneer.cpp  monsters.cpp  monsters.h  rocket.cpp  shielder.cpp  shocker.cpp  simple.cpp  snake.cpp  spawner.cpp  spawning.cpp  wormhole.cpp
sources/player/: camera.cpp  controls.cpp  powerup.cpp  ship.cpp  shots.cpp
sources/screens/: about.cpp  creditsScreen.cpp  game.cpp  gameOver.cpp  gameScreen.cpp  gameoverScreen.cpp  mainMenu.cpp  mainmenuScreen.cpp  options.cpp  optionsScreen.cpp  score.cpp  scoresScreen.cpp  screens.cpp  screens.h
src/grid/: collision.cpp  environment.cpp  game.h  gameInit.cpp  includes.h  main.cpp  player.cpp  screens.cpp  screens.h  sounds.cpp
(+165 files in other folders)
